# kin-unity

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  stasher.py
AI/: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  Makefile.toml  README.md  rustfmt.toml
AI/KinAI/: CMakeLists.txt  KinAI.cpp  KinAI.h
AI/MonteCarloTreeSearch/: CMakeLists.txt  MonteCarloTreeSearch.cpp  MonteCarloTreeSearch.h
AI/Source/: CMakeLists.txt  Example1.cpp  Example1.h  Example2.cpp  Example2.h  InterfaceMacros.h  KinAI.h  Logging.cpp  Logging.h
AI/Source/MCTS/: Node.cpp  Node.h
AI/Tests/: CMakeLists.txt  Example.tests.cpp  Node.tests.cpp
AI/Tests/KinAI/: example.cpp
AI/Tests/MonteCarloTreeSearch/: example.cpp
AI/crates/ai_server/: Cargo.toml
AI/crates/ai_server/src/: main.rs  server.rs
AI/crates/ai_server/src/mcts/: mod.rs  search.rs
AI/crates/arbiter/: Cargo.toml
AI/crates/benchmark/: Cargo.toml
AI/crates/benchmark/src/: main.rs
AI/crates/bootstrapper/: Cargo.toml
AI/crates/bootstrapper/src/: lib.rs
AI/crates/game_rules/: Cargo.toml
AI/crates/game_rules/src/: lib.rs
AI/crates/game_rules/src/deacon/: board.rs  form.rs  mod.rs  moves.rs
AI/crates/game_rules/src/deacon/moves/: move_iterator_tests.rs
AI/crates/game_rules/src/spice/: coord.rs  direction.rs  grid.rs  mod.rs  moves.rs  players.rs
AI/crates/mcts/: Cargo.toml
AI/crates/mcts/src/: game_state.rs  lib.rs  search.rs
AI/crates/server/: Cargo.toml
AI/crates/server/src/: main.rs  server.rs
AI/platform-make-directives/: linux.mk  mac.mk  windows.mk
AI/src/: game_state.rs  lib.rs
AI/src/mcts/: mod.rs  parameters.rs  search.rs
AI/src/rules/spice/: direction.rs  grid.rs  mod.rs
Assets/Code/: SphericalGridGenerator.cs
Assets/Scenes/: Main.unity
Assets/Scripts/: SphericalGridGenerator.cs
Frontend/: .gitattributes  .gitignore  Frontend.sln.DotSettings  Makefile
Frontend/Assets/Code/Editor/: AiServerCleanup.cs  BuildScripts.cs  Editor.asmdef
Frontend/Assets/Code/Player/AIComms/: AIComms.asmdef  AiServer.cs  NativePluginTest.cs
Frontend/Assets/Code/Player/DeaconRules/: AssemblyInfo.cs  Board.cs  DeaconRules.asmdef  GameAction.cs  GameState.cs  Piece.cs  Player.cs
Frontend/Assets/Code/Player/MCTS/: AssemblyInfo.cs  IGameAction.cs  IGameState.cs  MCTS.asmdef  RolloutJob.cs  SearchParameters.cs  SearchTreeNode.cs  Searcher.cs
Frontend/Assets/Code/Player/SpiceUI/: CameraController.cs  SphericalGridGenerator.cs  SpiceUI.asmdef
Frontend/Assets/DOTween/: DOTween.XML  readme.txt
Frontend/Assets/DOTween/Modules/: DOTweenModuleAudio.cs  DOTweenModuleEPOOutline.cs  DOTweenModulePhysics.cs  DOTweenModulePhysics2D.cs  DOTweenModuleSprite.cs  DOTweenModuleUI.cs  DOTweenModuleUnityVersion.cs  DOTweenModuleUtils.cs
Frontend/Assets/Deacon Assets/Prefabs/: Cell.prefab  Game Mode Button.prefab
Frontend/Assets/Deacon Assets/Scenes/: Main.unity
Frontend/Assets/Deacon Assets/ScriptableObjects/Atoms/: Blue Decider.asset  Player Decision Needed.asset
Frontend/Assets/Deacon Assets/Scripts/: Deacon.asmdef
Frontend/Assets/Deacon Assets/Scripts/Core Rules/: Board.cs  Form.cs  Piece.cs
Frontend/Assets/Deacon Assets/Scripts/Decisions/: AIDecider.cs  RandomDecider.cs
Frontend/Assets/Deacon Assets/Scripts/Game UI/: GameOverOverlay.cs
Frontend/Assets/Deacon Assets/Scripts/Kin UI/: Cell.cs
Frontend/Assets/Deacon Assets/Scripts/MCTS/: MctsNode.cs
Frontend/Assets/Deacon Assets/Scripts/Utils/: AInitializableScriptableObject.cs  SceneLoader.cs
Frontend/Assets/Fonts/: SyneMono-Regular SDF.asset
Frontend/Assets/Input/: Spice.inputactions
Frontend/Assets/Prefabs/: Game Mode Button.prefab  Piece Entry.prefab
Frontend/Assets/Resources/: DOTweenSettings.asset
Frontend/Assets/Scenes/: Main.unity  Menu.unity  Sphere Grid Playground.unity  Spice Arena.unity
Frontend/Assets/ScriptableObjects/Atoms/: Red Decider.asset
Frontend/Assets/Scripts/: ADecider.cs  AIDecider.cs  AInitializableScriptableObject.cs  AiServer.cs  GameLoop.cs  GameModeButton.cs  GameOverOverlay.cs  MctsDecider.cs  NativePluginTest.cs  PlayerDecider.cs  RandomDecider.cs  SceneLoader.cs  ScriptableObjectInitializer.cs  SphericalGridGenerator.cs
Frontend/Assets/Scripts/Autogenerated Atom Code/Actions/: ADeciderAction.cs  ADeciderPairAction.cs  GameStateAction.cs  GameStatePairAction.cs
Frontend/Assets/Scripts/Autogenerated Atom Code/Conditions/: ADeciderCondition.cs
Frontend/Assets/Scripts/Autogenerated Atom Code/Constants/: ADeciderConstant.cs  GameStateConstant.cs
Frontend/Assets/Scripts/Autogenerated Atom Code/EventInstancers/: ADeciderEventInstancer.cs  ADeciderPairEventInstancer.cs  GameStatePairEventInstancer.cs
Frontend/Assets/Scripts/Autogenerated Atom Code/EventReferenceListeners/: ADeciderEventReferenceListener.cs  ADeciderPairEventReferenceListener.cs  GameStateEventReferenceListener.cs  GameStatePairEventReferenceListener.cs
Frontend/Assets/Scripts/Core Rules/: Board.cs  FormExtensions.cs  GameState.cs  Piece.cs  PieceInteraction.cs  Player.cs
Frontend/Assets/Scripts/Decisions/: ADecider.cs  AIDecider.cs  MctsDecider.cs  PlayerDecider.cs  RandomDecider.cs
Frontend/Assets/Scripts/Editor/: AiServerCleanup.cs  BuildScripts.cs
Frontend/Assets/Scripts/Game UI/: GameModeButton.cs  GameOverOverlay.cs
Frontend/Assets/Scripts/Kin UI/: AIProgressIndicator.cs  BoardDriver.cs  Cell.cs  FormPopup.cs  GameLog.cs  GameLogGenerator.cs  HelpPage.cs  HelpPagePieceEntry.cs  PieceSpriteGenerator.cs
Frontend/Assets/Scripts/MCTS/: MctsNode.cs  MctsParams.cs  MctsSearcher.cs
Frontend/Assets/Scripts/Native/: Plugin.cs
Frontend/Assets/Scripts/Spice/: CameraController.cs  SphericalGridGenerator.cs
Frontend/Assets/Scripts/Utils/: SceneLoader.cs  ScriptableObjectInitializer.cs
Frontend/Assets/Scripts/kInvoke/: LibraryFunction.cs  LibraryImportAttribute.cs  LibraryLoader.cs
Frontend/Assets/Tests/Editor/: Tests.Editor.asmdef
Frontend/Assets/Tests/Player/: Tests.Player.asmdef
Frontend/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
(+83 files in other folders)
