[package]
name = "ai_server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.1.1", features = ["derive"] }
env_logger = "0.10.0"
glam = { version = "0.22.0", features = ["serde", "approx", "rand", "debug-glam-assert"] }
indextree = { version = "4.5.0", features = ["serde", "deser"] }
log = "0.4.17"
ndarray = { version = "0.15.6", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
rstest = { workspace = true }
