[package]
name = "game_rules"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dev-dependencies]
rstest = { workspace = true }

[dependencies]
glam = { version = "0.22.0", features = ["serde", "approx", "rand", "debug-glam-assert"] }
rand = { workspace = true }
ndarray = { version = "0.15.6", features = ["serde"] }
mcts = { path = "../mcts" }
lazy_static = "1.4.0"
itertools = "0.10.5"
