[package]
name = "game_rules"
description = "Authority on rules for various games-within-the-game of Kin, including implementations of MCTS and arbiter traits"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dev-dependencies]
rstest = { workspace = true }

[dependencies]
rand = { workspace = true }
ndarray = { version = "0.15.6", features = ["serde"] }
mcts = { path = "../mcts" }
pretty_assertions = "1.3.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
