[package]
name = "server"
description = "Interface and communication logic between Rust and Frontend"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dev-dependencies]
rstest = { workspace = true }

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
rand = { workspace = true }
serde_json = "1.0.91"
